--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "complate-ssg",
-	"version": "0.9.0",
+	"version": "0.10.0",
 	"description": "static-site generator for complate",
 	"author": "FND",
 	"license": "Apache-2.0",
@@ -14,13 +14,14 @@
 	},
 	"main": "index.js",
 	"scripts": {
-		"test": "eslint --cache *.js samples && echo ✓"
+		"test": "eslint --cache --ext .js --ext .jsx *.js samples && echo ✓"
 	},
 	"dependencies": {
-		"complate-jsx": "^0.8",
-		"complate-stream": "^0.9"
+		"complate-stream": "^0.9",
+		"faucet-pipeline-jsx": "^0.9.0"
 	},
 	"devDependencies": {
+		"eslint-config-fnd-jsx": "^1.0.1",
 		"release-util-fnd": "^1.0.2"
 	}
 }
