--- a/samples/.eslintrc
+++ b/samples/.eslintrc
@@ -1,15 +1,2 @@
-extends:
-- fnd
-- plugin:react/recommended
-plugins:
-- react
-settings:
-    react:
-        pragma: createElement
-rules:
-    jsx-quotes:
-    - error
-    - prefer-double
-    react/display-name: off
-    react/jsx-key: off
-    react/no-unknown-property: off
+root: true
+extends: fnd-jsx
