--- a/samples/package.json
+++ b/samples/package.json
@@ -8,8 +8,11 @@
 		"compile": "faucet --no-fingerprint --compact"
 	},
 	"dependencies": {
-		"complate-ssg": "^0.9.0",
-		"nodemon": "^1.11.0",
-		"npm-run-all": "^4.0.2"
+		"complate-ssg": "^0.12.0",
+		"nodemon": "^1.12.0",
+		"npm-run-all": "^4.1.1"
+	},
+	"devDependencies": {
+		"eslint-config-fnd-jsx": "^1.1.0"
 	}
 }
