--- a/samples/package.json
+++ b/samples/package.json
@@ -1,18 +1,17 @@
 {
 	"scripts": {
-		"start": "npm-run-all --parallel compile-watch build-watch",
+		"start": "npm-run-all --parallel compile:watch build:watch",
 		"test": "eslint --cache --ext .js --ext .jsx *.js views && echo ✓",
-		"build-watch": "nodemon -w dist/bundle.js -x 'node ./index.js'",
+		"build:watch": "nodemon -w dist/views.js -x 'node ./index.js'",
 		"build": "node ./index.js",
-		"compile-watch": "npm run compile -- --watch",
-		"compile": "faucet --no-fingerprint --compact"
+		"compile:watch": "npm run compile -- --watch",
+		"compile": "faucet --compact"
 	},
-	"dependencies": {
-		"complate-ssg": "^0.13.0",
-		"nodemon": "^1.12.1",
-		"npm-run-all": "^4.1.1"
-	},
+	"dependencies": {},
 	"devDependencies": {
-		"eslint-config-fnd-jsx": "^1.1.0"
+		"complate-ssg": "^0.15.0",
+		"eslint-config-fnd-jsx": "^1.3.0",
+		"nodemon": "^1.15.1",
+		"npm-run-all": "^4.1.2"
 	}
 }
