--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "complate-ssg",
-	"version": "0.16.1",
+	"version": "0.16.2",
 	"description": "static-site generator for complate",
 	"author": "FND",
 	"license": "Apache-2.0",
@@ -18,7 +18,8 @@
 	},
 	"dependencies": {
 		"complate-stream": "0.x",
-		"faucet-pipeline-jsx": "~1.0.0-beta.1"
+		"faucet-pipeline-jsx": "~1.0.0-beta.1",
+		"mkdirp": "^0.5.1"
 	},
 	"devDependencies": {
 		"eslint-config-fnd-jsx": "^1.3.0",
