--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "complate-ssg",
-	"version": "0.16.2",
+	"version": "0.17.0",
 	"description": "static-site generator for complate",
 	"author": "FND",
 	"license": "Apache-2.0",
@@ -13,16 +13,23 @@
 		"url": "https://github.com/complate/complate-ssg/issues"
 	},
 	"main": "index.js",
+	"bin": {
+		"complate-ssg": "bin/complate-ssg"
+	},
 	"scripts": {
-		"test": "eslint --cache --ext .js --ext .jsx *.js samples && echo ✓"
+		"test": "eslint --cache --ext .js --ext .jsx *.js src samples && echo ✓"
 	},
 	"dependencies": {
 		"complate-stream": "0.x",
-		"faucet-pipeline-jsx": "~1.0.0-beta.1",
+		"metacolon": "^1.0.0",
 		"mkdirp": "^0.5.1"
+	},
+	"optionalDependencies": {
+		"commonmark": "^0.28.1",
+		"faucet-pipeline-jsx": "~1.0.0-rc.4"
 	},
 	"devDependencies": {
 		"eslint-config-fnd-jsx": "^1.3.0",
-		"release-util-fnd": "^1.1.0"
+		"release-util-fnd": "^1.1.1"
 	}
 }
