--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "complate-ssg",
-	"version": "0.17.0",
+	"version": "0.18.0",
 	"description": "static-site generator for complate",
 	"author": "FND",
 	"license": "Apache-2.0",
@@ -12,7 +12,7 @@
 	"bugs": {
 		"url": "https://github.com/complate/complate-ssg/issues"
 	},
-	"main": "index.js",
+	"main": "src/index.js",
 	"bin": {
 		"complate-ssg": "bin/complate-ssg"
 	},
